--- a/.github/workflows/qiskit-classroom-converter-docker-publish.yml
+++ b/.github/workflows/qiskit-classroom-converter-docker-publish.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  # for qiskit-classroom-converter code
   IMAGE_NAME: qiskit-classroom-converter
 
 
@@ -49,6 +50,8 @@ jobs:
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
           context: .
+          # for qiskit-classroom-converter code
+          file: ./qiskit-classroom-converter/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
